Created Base Skeleton for front end including loading all assets and form

--- a/Hahn.ApplicationProcess.February2021.Frontend/index.ejs
+++ b/Hahn.ApplicationProcess.February2021.Frontend/index.ejs
@@ -8,6 +8,6 @@
     <link rel="icon" href="favicon.ico">
     <!-- imported CSS are concatenated and added automatically -->
   </head>
-  <body aurelia-app="main">
+  <body aurelia-app="main" class="bg-light">
   </body>
 </html>
